# llama_dashboard

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-prerelease.yml  build-rocm-gfx1151.yml
crates/gguf-parser/: Cargo.toml
crates/gguf-parser/src/: lib.rs  reader.rs  types.rs
crates/llama-core/: Cargo.toml
crates/llama-core/src/: backend.rs  batch.rs  chat.rs  context.rs  error.rs  generate.rs  lib.rs  model.rs  sampler.rs  token.rs
crates/llama-sys/: Cargo.toml  build.rs
crates/llama-sys/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  main.rs  state.rs
crates/server/src/cli/: config_cmd.rs  mod.rs  models.rs  run.rs  serve.rs
crates/server/src/middleware/: mod.rs
crates/server/src/routes/: health.rs  management.rs  mod.rs  native.rs  openai.rs  spa.rs  ws.rs
crates/server/src/services/: inference.rs  model_manager.rs
docker/cpu/: Dockerfile  build-packages.sh  export-llama-dashboard.sh
docker/cpu/packaging/: llama-dashboard-wrapper.sh  llama-dashboard.env  llama-dashboard.service
docker/rocm/: docker-compose.yml
docker/rocm/gfx1151/: Dockerfile  build-packages.sh  export-llama-dashboard.sh
docker/rocm/gfx1151/packaging/: llama-dashboard-wrapper.sh  llama-dashboard.env  llama-dashboard.service
docs/: prd.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts  index.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  zh-CN.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  chat.ts  models.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts
frontend/src/views/: Chat.vue  Dashboard.vue  ModelDetail.vue  Models.vue  Settings.vue
