[workspace]
resolver = "2"
members = [
    "crates/llama-sys",
    "crates/llama-core",
    "crates/gguf-parser",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/BegoniaHe/llama_dashboard"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates
llama-sys = { path = "crates/llama-sys" }
llama-core = { path = "crates/llama-core" }
gguf-parser = { path = "crates/gguf-parser" }
